Everything except for the student with studentId not found